@@ -111,17 +111,20 @@ a.back_news:hover	{color:#A8C5E5;}
 	============================================= */
 #donor_graph, #sector_graph, #publisher_countries_graph,
 #publisher_sectors_graph{background-color:#FFF; font-size:1.0em; line-height:1.3em; color:#444; border:1px solid #FFF;}
-a.ask					{display:block; width:960px; margin:0 auto; padding:0; color:#FFF; font-size:1.8em; text-align:center;}
-a.ask.donor				{background-color:#008FFF;}
-a.ask.donor:hover		{background-color:#33A4FC;}
-a.ask.sector			{background-color:#00C475;}
-a.ask.sector:hover		{background-color:#14EE96;}
+a.graph_wrap			{display:block; position:relative; width:960px; height:410px;}
+span.graph_view_all			{display:block; background-color:rgba(3,14,27,0); position:absolute; left:0; top:0; width:960px; height:410px; color:rgba(255,255,255,0); font-size:60px; line-height:390px; text-align:center;}
+span.graph_view_all:hover	{background-color:rgba(3,14,27,0.85); color:rgba(255,255,255,1);}
+span.ask				{display:block; width:960px; margin:0 auto; padding:0; color:#FFF; font-size:1.8em; text-align:center;}
+span.ask.donor			{background-color:#008FFF;}
+span.ask.sector			{background-color:#00C475;}
 .main_peak_wrap			{width:960px; background-color:#FFF; display:block;}
 .peak					{margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent; display:block;}	/* Triangles */
 .peak.donor				{border-top:20px solid #008FFF;}
 .peak.sector			{border-top:20px solid #00C475;}
+
 a.view_all_money		{display:block; width:960px; background-color:rgba(0,14,32,0.7); color:#CCC; border-radius:0 0 8px 8px; text-align:center; margin:0 auto; padding:15px 0; font-size:1.1em;}
-a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#FFF;}
+a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#FFF;} /*	old view all button under graphs	*/
+
 .caption				{border-bottom:0;}
 .caption:last-of-type	{border-bottom:1px;}
 .ask_title				{padding:20px 40px; display:block;}
