@@ -1,45 +1,0 @@
-0 info it worked if it ends with ok
-1 verbose cli [ '/usr/bin/nodejs', '/usr/bin/npm', 'run', 'build' ]
-2 info using npm@3.5.2
-3 info using node@v4.2.6
-4 verbose run-script [ 'prebuild', 'build', 'postbuild' ]
-5 info lifecycle ctrack@0.0.1~prebuild: ctrack@0.0.1
-6 silly lifecycle ctrack@0.0.1~prebuild: no script for prebuild, continuing
-7 info lifecycle ctrack@0.0.1~build: ctrack@0.0.1
-8 verbose lifecycle ctrack@0.0.1~build: unsafe-perm in lifecycle true
-9 verbose lifecycle ctrack@0.0.1~build: PATH: /usr/share/npm/bin/node-gyp-bin:/home/shi/iati/iati-js/ctrack/node_modules/.bin:/home/shi/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
-10 verbose lifecycle ctrack@0.0.1~build: CWD: /home/shi/iati/iati-js/ctrack
-11 silly lifecycle ctrack@0.0.1~build: Args: [ '-c',
-11 silly lifecycle   'node js/bake.js && node node_modules/browserify/bin/cmd.js -r ./js/ctrack.js:ctrack -d -o jslib/ctrack.js && node node_modules/uglify-js/bin/uglifyjs jslib/ctrack.js -o jslib/ctrack.min.js' ]
-12 info lifecycle ctrack@0.0.1~build: Failed to exec build script
-13 verbose stack Error: ctrack@0.0.1 build: `node js/bake.js && node node_modules/browserify/bin/cmd.js -r ./js/ctrack.js:ctrack -d -o jslib/ctrack.js && node node_modules/uglify-js/bin/uglifyjs jslib/ctrack.js -o jslib/ctrack.min.js`
-13 verbose stack spawn ENOENT
-13 verbose stack     at ChildProcess.<anonymous> (/usr/share/npm/lib/utils/spawn.js:17:16)
-13 verbose stack     at emitTwo (events.js:87:13)
-13 verbose stack     at ChildProcess.emit (events.js:172:7)
-13 verbose stack     at maybeClose (internal/child_process.js:821:16)
-13 verbose stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:211:5)
-14 verbose pkgid ctrack@0.0.1
-15 verbose cwd /home/shi/iati/iati-js/ctrack
-16 error Linux 4.5.7-040507-generic
-17 error argv "/usr/bin/nodejs" "/usr/bin/npm" "run" "build"
-18 error node v4.2.6
-19 error npm  v3.5.2
-20 error file sh
-21 error code ELIFECYCLE
-22 error errno ENOENT
-23 error syscall spawn
-24 error ctrack@0.0.1 build: `node js/bake.js && node node_modules/browserify/bin/cmd.js -r ./js/ctrack.js:ctrack -d -o jslib/ctrack.js && node node_modules/uglify-js/bin/uglifyjs jslib/ctrack.js -o jslib/ctrack.min.js`
-24 error spawn ENOENT
-25 error Failed at the ctrack@0.0.1 build script 'node js/bake.js && node node_modules/browserify/bin/cmd.js -r ./js/ctrack.js:ctrack -d -o jslib/ctrack.js && node node_modules/uglify-js/bin/uglifyjs jslib/ctrack.js -o jslib/ctrack.min.js'.
-25 error Make sure you have the latest version of node.js and npm installed.
-25 error If you do, this is most likely a problem with the ctrack package,
-25 error not with npm itself.
-25 error Tell the author that this fails on your system:
-25 error     node js/bake.js && node node_modules/browserify/bin/cmd.js -r ./js/ctrack.js:ctrack -d -o jslib/ctrack.js && node node_modules/uglify-js/bin/uglifyjs jslib/ctrack.js -o jslib/ctrack.min.js
-25 error You can get information on how to open an issue for this project with:
-25 error     npm bugs ctrack
-25 error Or if that isn't available, you can get their info via:
-25 error     npm owner ls ctrack
-25 error There is likely additional logging output above.
-26 verbose exit [ 1, true ]
