@@ -3,7 +3,7 @@ Static site (2016-06-23 shi)
 Changed Search to Discover
 Replace search with discover on About
 Updated embed video layout fix for News
-Updated footer links sitewide
+Updated footer links sitewide, includes translations
 
 
 Static site (2016-06-22 shi)
