@@ -5,7 +5,8 @@ Remove email contact
 Added vimeo video
 Minor CSS changes
 Changed text on Discover button
-Updated footer links sitewide
+Updated footer links sitewide, includes translations
+Updated hover states of graphs for publisher and recipient pages
 
 
 Development Portal (2016-06-22 shi)
